twitter icon missing, fixed-- change of class name to retrieve from fontawesome, letter-spacing edit for spacing to show

--- a/styles/master.css
+++ b/styles/master.css
@@ -47,7 +47,7 @@ body {
   border: 15px double #FFDFBF;
   font-family: 'Rock Salt', cursive;
   /* 16 * 0.0625 = 1px */
-  letter-spacing: 0.0625em * 5;
+  letter-spacing: 5px;
 }
 
 .waves-effect {
